# cmake-cpp-example

./: CMakeLists.txt  LICENSE  README.md
include/: MathLibrary.h
src/: MathClient.cpp  MathLibrary.cpp
